classDiagram
direction LR

namespace shunyakv {
  class connection {
    -socket_server& _server
    -connected_socket _sock
    -input_stream~char~ _in
    -output_stream~char~ _out
    -socket_address _client_addr
    -socket_address _server_addr
    -circular_buffer~future~sstring~~ _respq
    -condition_variable _respq_cv
    -semaphore _slots
    -bool _eof
    -bool _done
    -bool _tls
    -sstring client_id
    +read() future~void~
    +write() future~void~
    +shutdown() void
  }

  class socket_server {
    -vector~server_socket~ _listeners
    -handler_factory_t _handler_factory
    -shared_ptr~tls::server_credentials~ _credentials
    -gate _task_gate
    -list~connection~ _connections
    +set_handler(handler_factory_t) void
    +listen(socket_address) future~void~
    +start() future~void~
    +stop() future~void~
    +on_conn_open(connection&) void
    +on_conn_close(connection&) void
    +connections() auto&
  }

  class socket_server_orchestrator {
    -unique_ptr~sharded~socket_server~~ _server_dist
    +start() future~void~
    +stop() future~void~
    +set_handler(handler_factory_t) future~void~
    +listen(socket_address) future~void~
    +server() sharded~socket_server~&
  }

  class ParsedRequest {
    +sstring frame
    +resp::ArgvView argv
  }
}

class SocketHandler {
  <<abstract>>
  +process(connection&) future~void~
}

class PipelinedSocketHandler {
  <<abstract>>
  #circular_buffer~future~sstring~~ _respq
  #condition_variable _cv
  #bool _eof
  #semaphore _slots
  #read_loop(connection&) future~void~
  #write_loop(connection&) future~void~
  #handle_request(ParsedRequest) future~sstring~
  #try_extract_request(sstring&) optional~ParsedRequest~
  +process(connection&) future~void~
}

class RespHandler {
  -st _st
  -size_t _pos
  -size_t _cmd_start
  -int64_t _argc
  -int64_t _argi
  -int64_t _bulk_len
  -vector~slice~ _slices
  #handle_request(ParsedRequest) future~sstring~
  #try_extract_request(sstring&) optional~ParsedRequest~
}

class LineEchoHandler {
  #handle_request(ParsedRequest) future~sstring~
}

SocketHandler <|-- PipelinedSocketHandler
PipelinedSocketHandler <|-- RespHandler
PipelinedSocketHandler <|-- LineEchoHandler

shunyakv::socket_server "1" *-- "0..*" shunyakv::connection : owns
shunyakv::connection --> shunyakv::socket_server : references
shunyakv::socket_server ..> SocketHandler : creates via factory
shunyakv::socket_server_orchestrator "1" *-- "1" shunyakv::socket_server : sharded
SocketHandler ..> shunyakv::connection : process()
PipelinedSocketHandler ..> shunyakv::ParsedRequest
